<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fertilizer</groupId>
	<artifactId>fertilizerapp</artifactId>
	<version>1.0.6</version>
	<name>FertilizerApp</name>
	<description>App to optimize component selection for customizing field
		fertilizer mixes.</description>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
		<javafx.version>22</javafx.version>

		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
		<gluonfx.maven.plugin.version>1.0.23</gluonfx.maven.plugin.version>
		<main.class>fertilizer.Launcher</main.class>

		<app.identifier>fertilizerapp</app.identifier>
		<app.description>App to optimize component selection for customizing
			field fertilizer mixes.</app.description>
		<package.type />
		<module.name>stamfordcoop</module.name>
		<vendor>Stamford Farmers Cooperative</vendor>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.testfx/testfx-junit5 -->
		<dependency>
			<groupId>org.testfx</groupId>
			<artifactId>testfx-junit5</artifactId>
			<version>4.0.18</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.7.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math4-legacy-core</artifactId>
			<version>4.0-beta1</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>


		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math4-legacy</artifactId>
			<version>4.0-beta1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>3.0.4</version>
		</dependency>

		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>fontbox</artifactId>
			<version>3.0.4</version>
		</dependency>

		<dependency>
			<groupId>com.github.librepdf</groupId>
			<artifactId>openpdf</artifactId>
			<version>2.0.3</version>
		</dependency>

		<dependency>
			<groupId>org.panteleyev</groupId>
			<artifactId>jpackage-maven-plugin</artifactId>
			<version>1.6.6</version>
		</dependency>

	</dependencies>

	<build>
	 <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
	
	
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>${maven.compiler.release}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>${javafx.maven.plugin.version}</version>
				<configuration>
					<mainClass>${main.class}</mainClass>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<!-- here the phase you need -->
						<phase>compile</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>target/gluonfx/x86_64-windows</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}</directory>
									<filtering>true</filtering>
									<includes>
										<include>*.csv</include>
										<include>header.txt</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resources1</id>
						<!-- here the phase you need -->
						<phase>compile</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>target/defaults</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}</directory>
									<filtering>true</filtering>
									<includes>
										<include>default*.csv</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
					<includes>
						<include>*Test*.java</include>
					</includes>
					<argLine>@{argLine} --add-exports
						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
						--add-opens
						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<!-- attached to Maven test phase -->
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.1</version>
				<configuration>
					<outputDirectory>target/jars</outputDirectory>
					<excludes>**/maven/*</excludes>
					<excludes>**/native-image/*</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<artifactSet>
								<excludes>
									<exclude>org.junit.jupiter:*</exclude>
									<exclude>org.apiguardian:*</exclude>
									<exclude>org.opentest4j:*</exclude>
									<exclude>org.junit.platform:*</exclude>
									<exclude>org.panteleyev:*</exclude>
									<exclude>org.apache.maven.shared:*</exclude>
									<exclude>org.opentest4j:*</exclude>
								</excludes>
							</artifactSet>
							<shadedArtifactAttached>false</shadedArtifactAttached>
							<shadedClassifierName>project-classifier</shadedClassifierName>
							<outputFile>target\shade\${project.artifactId}.jar</outputFile>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>${main.class}</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<!--has problem with automatic modules -->
				<!-- run with command clean package jpackage:jpackage@win -->
				<groupId>org.panteleyev</groupId>
				<artifactId>jpackage-maven-plugin</artifactId>
				<version>1.6.4</version>

				<configuration>
					<name>Fertilizer App</name>
					<appVersion>${project.version}</appVersion>
					<vendor>${vendor}</vendor>
					<input>target\shade\</input>
					<mainClass>${main.class}</mainClass>
					<mainJar>${project.artifactId}.jar</mainJar>
					<destination>target/dist</destination>
					<appContentPaths>defaults</appContentPaths>
					<javaOptions>
						<option>-Dfile.encoding=UTF-8</option>
					</javaOptions>
					<winDirChooser>true</winDirChooser>
					<winShortcut>true</winShortcut>
					<winMenu>true</winMenu>
					<winMenuGroup>Stamford Farmers Cooperative</winMenuGroup>						
				</configuration>

				<executions>
					<execution>
						<id>win</id>
						<configuration>
							<icon>icons/icon.ico</icon>
							<winMenu>true</winMenu>		
							<type>MSI</type>		
													
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>desktop</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<gluonfx.target>host</gluonfx.target>
			</properties>
		</profile>
	</profiles>
</project>